# OpenGL-CMake-Template

./: .gitignore  CMakeLists.txt  README.md  run.bat
src/: CMakeLists.txt  main.cc
